--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ twitter_username:
 github_username:    
 facebook_username:  
 instagram_username:  
-linkedin_username:
+linkedin_username: anastasiostsourtis
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
