--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
+title:              Anastasios (Tasos) Tsourtis
+email:              tsourtis@iacm.forth.gr
+description:        Applied Mathematatics, PhD
 author:             Start Bootstrap
 baseurl:            ""
 url:                "https://tasoskrhs.github.io"
 
 # Social Profiles
 twitter_username:   
-github_username:    
+github_username: tasoskrhs
 facebook_username:  
 instagram_username:  
 linkedin_username: anastasiostsourtis
