Initial commit of Clean Blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Anastasios (Tasos) Tsourtis
 email:              tsourtis@iacm.forth.gr
-description:        Applied Mathematatics, PhD
+description:        Applied Mathematics, PhD
 author:             Start Bootstrap
 baseurl:            ""
 url:                "https://tasoskrhs.github.io"
